// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleIcon /> matches snapshot when closed 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down fa-rotate-180 "
    data-icon="chevron-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;

exports[`<ToggleIcon /> matches snapshot when open 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-chevron-down "
    data-icon="chevron-down"
    data-prefix="fas"
    focusable="false"
    role="img"
    style="transition: transform 0.25s ease-in-out;"
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
      fill="currentColor"
    />
  </svg>
</DocumentFragment>
`;
